--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongodb": "^6.9.0",
     "pouchdb": "^7.2.2",
     "socket.io": "^4.4.1",
     "twilio": "^3.72.0",
